<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoInsightConfig_v_5_x_x" Id="{4f2c0f1b-fa0b-09ae-14c5-7f6db18badfb}">
    <Declaration><![CDATA[TYPE TcoInsightConfig_v_5_x_x : 
STRUCT
    ResultDataSize : eTcoInsightResultDataSize_v_5_x_x := eTcoInsightResultDataSize_v_5_x_x.RESULT_DATA_64B;
    UserDataSize : eTcoInsightUserDataSize_v_5_x_x := eTcoInsightUserDataSize_v_5_x_x.USER_DATA_64B;
    DataFormat : eTcoDataFormat := TcoUtilities.eTcoDataFormat.BigEndian;
    UpdateStatesPermanently : BOOL := FALSE;
    MaxJobNumber : UINT := 999;
    InfoTime : TIME := T#2S;
    ErrorTime : TIME := T#5S;
    ShowUserData : BOOL := FALSE;
    ShowResultsData : BOOL := FALSE;
//	ServiceJobNumber		:	UINT;
//	ServiceJobName			:	STRING;
//	ServiceSoftEventNumber	:	UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>